--- a/index.html
+++ b/index.html
@@ -866,9 +866,9 @@
 												<img class="img-responsive" src="img/user/shiva.jpg" alt="" />
 												<!-- Hover block -->
 												<div class="social text-center">
-													<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-													<a class="google-plus" href="#"><i class="fa fa-google-plus"></i></a>
-													<a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+													<a class="facebook" href="http://facebook.com/ShivaSitaraman"><i class="fa fa-facebook"></i></a>
+													<a class="google-plus" href="https://plus.google.com/+ShivaSitaraman/posts"><i class="fa fa-google-plus"></i></a>
+													<a class="linkedin" href="http://www.linkedin.com/pub/shiva-sitaraman/18/393/825"><i class="fa fa-linkedin"></i></a>
 												</div>
 												<div class="hover-background"></div>
 											</div>
